#59 implemented k-means clustering, added routes, changed some routes. DOTENV CHANGES!
