# server/api_package/static/swagger.yml
@@ -107,6 +107,11 @@ paths:
                       [0.9999999, 0.5555555, 0.2222222],
                       [0.6666666, 0.2222222, 0.4444444]
                     ]
+                  cluster_centers:
+                    type: array
+                    items: integer
+                    description: Corresponding cluster centers
+                    example: [5, 1]
   # 2
   /faiss/getNN/{picture_id}:
     post:
@@ -184,7 +189,55 @@ paths:
                     example: [
                       [0.9999999, 0.5555555, 0.2222222]
                     ]
- 
+                  cluster_center:
+                    type: integer
+                    description: Corresponding cluster center
+                    example: 1
+  # 3
+  /kmeans/centroids:
+    get:
+      tags: [
+        Get nearest neighbour(s)
+      ]
+      summary: Get the position of all centroids
+      responses:
+        '200':
+          application/json:
+            schema:
+              type: array
+              example: [
+                [-10.32, 2.01],
+                [20.33, 1.33]
+              ]
+              items:
+                type: array
+                items:
+                  type: number
+                  format: float
+    post:
+      tags: [
+        Get nearest neighbour(s)
+      ]
+      summary: Change the amount of centroids. Default is min(nr_of_data_points, max(1, NUM_CENTROIDS)). NUM_CENTROIDS is specified in .env.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nr_of_centroids:
+                  type: integer
+                  example: 5
+                  description: desired amount of centroids
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "k-means now uses 5 centroids"
+
   # thumbnails
   # 1
   /images/thumbnails/size:
@@ -395,6 +448,10 @@ paths:
                     format: float
                     example: [2.0192932, 1.9492030]
                     description: x and y coordinates of the image
+                  cluster_center:
+                    type: integer
+                    description: Corresponding cluster center
+                    example: 1
   # 4
   /images/multiple:
     post:
@@ -488,6 +545,10 @@ paths:
                       format: float
                       example: [2.0192932, 1.9492030]
                       description: x and y coordinates of the image
+                    cluster_center:
+                      type: integer
+                      description: Corresponding cluster center
+                      example: 1
   # 6
   /images/all/metadata:
     get:
@@ -540,6 +601,10 @@ paths:
                       format: float
                       example: [2.0192932, 1.9492030]
                       description: x and y coordinates of the image
+                    cluster_center:
+                      type: integer
+                      description: Corresponding cluster center
+                      example: 1
   
   # other data
   # 1
@@ -653,7 +718,6 @@ paths:
                   IndexFlatL2,
                   IndexIVFFlat
                 ]
-
   # 4
   /faiss/index/{index_key}:
     post:
@@ -677,5 +741,6 @@ paths:
               schema:
                 type: string
                 example: "success"  
+  # 5
 
 
